[gd_scene load_steps=2 format=3 uid="uid://di2kp1chu4gmo"]

[ext_resource type="Script" uid="uid://cogq1yd5s2xa8" path="res://src/MapGenerator/parts/corridors/corridor.gd" id="1_8jxpm"]

[node name="Corridor" type="Node3D"]
script = ExtResource("1_8jxpm")
_corridor_type = 2
_west_doors = true
_east_doors = true

[node name="NorthDoorPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -1.9)

[node name="SouthDoorPoint" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.2, 1.9)

[node name="WestDoorPoint" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.9, 0.2, 8.30516e-08)

[node name="EastDoorPoint" type="Node3D" parent="."]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 1.9, 0.2, -8.30516e-08)
